add first image

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #2f4f7f; /* Fond bleu foncé */
+    background-color: #040355; /* Fond bleu foncé */
     font-family: Tahoma, sans-serif; /* Police Tahoma */
 }
 
