--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,25 @@ footer {
     padding: 10px;
 }
 
+.hello-world {
+    width: 200px;
+    height: 200px;
+    margin: 20px auto;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: #1abc9c; /* couleur de fond turquoise */
+    color: #fff; /* couleur du texte blanc */
+    text-align: center;
+    padding: 50px 0; /* ajustez le padding pour centrer le texte verticalement */
+}
+
+.hello-world img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .about-me-image {
     width: 200px;
     height: 200px;
