--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ footer {
 }
 
 .hello-world img {
-    width: 50%;
-    height: 50%;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 50%;
 }
