--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #042c16; /* Fond bleu foncé */
+    background-color: #031a0d; /* Fond bleu foncé */
     font-family: Tahoma, sans-serif; /* Police Tahoma */
     color: #ddd; /* Corps du texte en blanc légèrement grisé */
 }
@@ -48,8 +48,8 @@ footer {
 }
 
 .hello-world img {
-    width: 200px;
-    height: 200px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border-radius: 50%;
 }
