--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ footer {
     padding: 10px;
 }
 
-.hello-world img {
+.header-gif img {
     width: 50px;
     height: 50px;
     object-fit: cover;
