--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,9 @@ footer {
 }
 
 .header-gif img {
-    width: 50px;
-    height: 50px;
+    text-align: center;
+    width: 2000px;
+    height: 200px;
     object-fit: cover;
     border-radius: 50%;
 }
