--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #031a0d; /* Fond bleu foncé */
+    background-color: #05031a; /* Fond bleu foncé */
     font-family: Tahoma, sans-serif; /* Police Tahoma */
     color: #ddd; /* Corps du texte en blanc légèrement grisé */
 }
