--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ footer {
     padding: 10px;
 }
 
-.header-gif img {
+.header-gif {
     text-align: center;
     width: 2000px;
     height: 200px;
