--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ footer {
 }
 
 .header-gif {
+
     /* faire que la taille de l'image ne dépasse pas la taille du header */
     max-width: 100%;
 
@@ -67,8 +68,9 @@ footer {
 
     /* centrer l'image horizontalement et verticalement */
     display: block;
+    margin: 0 auto;
     position: relative;
-    top: 100%;
+    bottom: 0%;
     transform: translateY(-50%);
 }
 
