--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ footer {
     height: 200px;
 
     /* ajouter une marge en haut pour créer un espace */
-    margin-top: 20px;
+    margin-top: 100px;
 
     /* Appliquer une légère courbe à la bordure */
     border-radius: 10px;
@@ -86,14 +86,19 @@ footer {
 }
 
 .pdf-container {
-    height: 100vh; /* set the container height to full page height */
-    width: 100vw; /* set the container width to full page width */
-    display: flex; /* center the PDF horizontally and vertically */
+    height: 100vh;
+    /* set the container height to full page height */
+    width: 100vw;
+    /* set the container width to full page width */
+    display: flex;
+    /* center the PDF horizontally and vertically */
     justify-content: center;
     align-items: center;
-  }
+}
 
-  .pdf-container embed {
-    width: 100%; /* set the PDF width to full container width */
-    height: 100%; /* set the PDF height to full container height */
-  }
+.pdf-container embed {
+    width: 100%;
+    /* set the PDF width to full container width */
+    height: 100%;
+    /* set the PDF height to full container height */
+}
