--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ footer {
 
     /* centrer l'image horizontalement et verticalement */
     display: block;
-    margin-left: 0 auto;
+    margin-bottom: 0 auto;
     position: center;
     bottom: 0%;
     transform: translateY(-50%);
