--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #031a0d;
+    background-color: #0e1718;
     /* Fond bleu foncé */
     font-family: Tahoma, sans-serif;
     /* Police Tahoma */
