--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,31 @@ footer {
     /* set the PDF height to full container height */
 }
 
+.project {
+    margin-bottom: 20px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.project-image {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.languages {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.languages img {
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+}
 
 footer ul {
     list-style: none;
