--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,10 @@ footer {
     height: 150px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .languages {
