try to center gif

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
     /* centrer l'image horizontalement et verticalement */
     display: block;
-    margin-bottom: 0 auto;
+    margin: 0 auto;
 }
 
 .title {
