--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ footer {
 }
 
 .testimonial-frame {
-    background-color: #1ABC9C; /* turquoise color */
+    background-color: #03856b; /* turquoise color */
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
